[package]
name = "chess"
version = "0.1.0"
authors = ["Dev Chakraborty <devchakraborty@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
text_io = "0.1"
unicode-segmentation = "1.6.0"